; ModuleID = '/home/carl/AnghaBench/linux/sound/aoa/fabrics/extr_layout.c_use_layout.c'
source_filename = "/home/carl/AnghaBench/linux/sound/aoa/fabrics/extr_layout.c_use_layout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.layout = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }

@MAX_CODECS_PER_BUS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"snd-aoa-codec-%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.layout*)* @use_layout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @use_layout(%struct.layout* %0) #0 {
  %2 = alloca %struct.layout*, align 8
  %3 = alloca i32, align 4
  store %struct.layout* %0, %struct.layout** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %29, %1
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @MAX_CODECS_PER_BUS, align 4
  %7 = icmp slt i32 %5, %6
  br i1 %7, label %8, label %32

8:                                                ; preds = %4
  %9 = load %struct.layout*, %struct.layout** %2, align 8
  %10 = getelementptr inbounds %struct.layout, %struct.layout* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = load i32, i32* %3, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i64 %13
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %28

18:                                               ; preds = %8
  %19 = load %struct.layout*, %struct.layout** %2, align 8
  %20 = getelementptr inbounds %struct.layout, %struct.layout* %19, i32 0, i32 0
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %20, align 8
  %22 = load i32, i32* %3, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i64 %23
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = call i32 @request_module(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i64 %26)
  br label %28

28:                                               ; preds = %18, %8
  br label %29

29:                                               ; preds = %28
  %30 = load i32, i32* %3, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %3, align 4
  br label %4

32:                                               ; preds = %4
  ret void
}

declare dso_local i32 @request_module(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
